<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.cis195.rockpaperscissors.MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_1"/>
        <Button
            android:id="@+id/player_1_rock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rock"/>
        <Button
            android:id="@+id/player_1_paper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paper"/>
        <Button
            android:id="@+id/player_1_scissors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scissors"/>
    </LinearLayout>

    <TextView
        android:id="@+id/player_1_clicked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_clicked"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_2"/>
        <Button
            android:id="@+id/player_2_rock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rock"/>
        <Button
            android:id="@+id/player_2_paper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paper"/>
        <Button
            android:id="@+id/player_2_scissors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scissors"/>
    </LinearLayout>

    <TextView
        android:id="@+id/player_2_clicked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_clicked"/>

    <Button
        android:id="@+id/evaluate"
        style="@style/wrap_contents"
        android:text="@string/go"/>

    <Button
        android:id="@+id/reset"
        style="@style/wrap_contents"
        android:text="@string/reset"
        android:onClick="reset"/>

</LinearLayout>
